tests/NormalTests/paczka1/fuzzy1/33109057.err
Error in line 2: DWo S499 73,7
Error in line 5: A0y9z S318 13,9
Error in line 8: A0y9z A955 66,2
Error in line 31: DWo A878 34,8
